// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a single child element 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb>
          <div>
            <responsiveweb__Base>
              <div>
                <div>
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`2. two child elements 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb>
          <div>
            <responsiveweb__Base>
              <div>
                <div>
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div />
            </responsiveweb>
            <responsiveweb__Base>
              <div>
                <responsiveweb__Base>
                  <div>
                    <div>
                      support-1
                    </div>
                  </div>
                </responsiveweb__Base>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`3. three child elements 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb>
          <div>
            <responsiveweb__Base>
              <div>
                <div>
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div />
            </responsiveweb>
            <responsiveweb__Base>
              <div>
                <responsiveweb__Base>
                  <div>
                    <div>
                      support-1
                    </div>
                  </div>
                </responsiveweb__Base>
                <responsiveweb__Base>
                  <div>
                    <div>
                      support-2
                    </div>
                  </div>
                </responsiveweb__Base>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`4. test getsupportcontainer styles with supportcount 3 and index 1 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2059608660,
    "componentId": "responsiveweb__Base-fgzeui-15",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-wrap:wrap;min-height:auto;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){flex-basis:0 !important;}",
      "border-top-color:",
      "#DBDBDB",
      ";border-top-style:solid;border-top-width:1px;margin-top:",
      "10px",
      ";padding-top:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){border-left-color:",
      "#DBDBDB",
      ";border-left-style:solid;border-left-width:1px;border-top:none;margin-left:",
      "10px",
      ";margin-top:0;padding-right:",
      "10px",
      ";padding-top:0;}@media (min-width:",
      "1024",
      "px){padding-right:",
      "0",
      ";}",
      "@media (min-width:",
      "768",
      "px){max-width:100%;}",
      "@media (min-width:",
      "1024",
      "px){padding-left:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-10",
    "responsiveweb__Base-fgzeui-11",
    "responsiveweb__Base-fgzeui-14",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-15",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`5. test getsupportcontainer styles with supportcount 2 and index 1 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2059608660,
    "componentId": "responsiveweb__Base-fgzeui-15",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-wrap:wrap;min-height:auto;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){flex-basis:0 !important;}",
      "border-top-color:",
      "#DBDBDB",
      ";border-top-style:solid;border-top-width:1px;margin-top:",
      "10px",
      ";padding-top:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){border-left-color:",
      "#DBDBDB",
      ";border-left-style:solid;border-left-width:1px;border-top:none;margin-left:",
      "10px",
      ";margin-top:0;padding-right:",
      "0",
      ";padding-top:0;}@media (min-width:",
      "1024",
      "px){padding-right:",
      "10px",
      ";}",
      "@media (min-width:",
      "768",
      "px){max-width:50%;}",
      "@media (min-width:",
      "1024",
      "px){padding-left:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-10",
    "responsiveweb__Base-fgzeui-11",
    "responsiveweb__Base-fgzeui-13",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-15",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`6. test getsupportcontainer styles with supportcount 2 and index 0 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2059608660,
    "componentId": "responsiveweb__Base-fgzeui-15",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-wrap:wrap;min-height:auto;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){flex-basis:0 !important;}",
      "@media (min-width:",
      "768",
      "px){padding-left:",
      "0",
      ";padding-right:",
      "0",
      ";}",
      "@media (min-width:",
      "768",
      "px){max-width:50%;}",
      "@media (min-width:",
      "1024",
      "px){padding-left:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-10",
    "responsiveweb__Base-fgzeui-12",
    "responsiveweb__Base-fgzeui-13",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-15",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`7. test getsupportcontainer styles with supportcount 3 and index 0 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2059608660,
    "componentId": "responsiveweb__Base-fgzeui-15",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-wrap:wrap;min-height:auto;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";@media (min-width:",
      "768",
      "px){flex-basis:0 !important;}",
      "@media (min-width:",
      "768",
      "px){padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
      "@media (min-width:",
      "768",
      "px){max-width:100%;}",
      "@media (min-width:",
      "1024",
      "px){padding-left:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-10",
    "responsiveweb__Base-fgzeui-12",
    "responsiveweb__Base-fgzeui-14",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-15",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`8. test getsupportscontainer styles with supportcount 2 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616583,
    "componentId": "responsiveweb__Base-fgzeui-9",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-direction:column;height:auto;@media (min-width:",
      "768",
      "px){flex-basis:0 !important;flex-direction:row;}",
      "@media (min-width:",
      "768",
      "px){min-width:100%;}",
      "@media (min-width:",
      "1024",
      "px){min-width:",
      "auto",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-7",
    "responsiveweb__Base-fgzeui-8",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-9",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`9. test getsupportscontainer styles with supportcount 1 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616583,
    "componentId": "responsiveweb__Base-fgzeui-9",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-direction:column;height:auto;@media (min-width:",
      "768",
      "px){flex-basis:0 !important;flex-direction:row;}",
      "@media (min-width:",
      "1024",
      "px){min-width:",
      "400px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-7",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-9",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`10. test getopinioncontainer styles with supportcount 1 and hassupports 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616579,
    "componentId": "responsiveweb__Base-fgzeui-5",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-grow:1;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";width:",
      "auto",
      ";@media (min-width:",
      "768",
      "px){a > div,a > div > div{height:100%;}}",
      "@media (min-width:",
      "768",
      "px){flex-basis:0 !important;flex-grow:",
      "3",
      ";padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
      "@media (min-width:",
      "1024",
      "px){border-bottom:none;margin-bottom:0;min-width:auto;padding-bottom:0;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-1",
    "responsiveweb__Base-fgzeui-2",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-5",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`11. test getopinioncontainer styles with supportcount 1 and hassupports - false 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616579,
    "componentId": "responsiveweb__Base-fgzeui-5",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-grow:1;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";width:",
      "100%",
      ";@media (min-width:",
      "768",
      "px){a > div,a > div > div{height:100%;}}",
      "@media (min-width:",
      "768",
      "px){flex-grow:0;padding-left:0;padding-right:0;}",
      "@media (min-width:",
      "1024",
      "px){border-bottom:none;margin-bottom:0;min-width:auto;padding-bottom:0;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-1",
    "responsiveweb__Base-fgzeui-3",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-5",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`12. test getopinioncontainer styles with supportcount 2 and hassupports 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616579,
    "componentId": "responsiveweb__Base-fgzeui-5",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-grow:1;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";width:",
      "auto",
      ";@media (min-width:",
      "768",
      "px){a > div,a > div > div{height:100%;}}",
      "@media (min-width:",
      "768",
      "px){flex-basis:0 !important;flex-grow:",
      "1",
      ";padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
      "@media (min-width:",
      "768",
      "px){border-bottom-color:",
      "#DBDBDB",
      ";border-bottom-style:solid;border-bottom-width:1px;margin-bottom:",
      "10px",
      ";min-width:100%;padding-bottom:",
      "10px",
      ";padding-left:0;padding-right:0;}",
      "@media (min-width:",
      "1024",
      "px){border-bottom:none;margin-bottom:0;min-width:auto;padding-bottom:0;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-1",
    "responsiveweb__Base-fgzeui-2",
    "responsiveweb__Base-fgzeui-4",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-5",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`13. test getopinioncontainer styles with supportcount 2 and hassupports - false 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 1103616579,
    "componentId": "responsiveweb__Base-fgzeui-5",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-grow:1;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";width:",
      "100%",
      ";@media (min-width:",
      "768",
      "px){a > div,a > div > div{height:100%;}}",
      "@media (min-width:",
      "768",
      "px){flex-grow:0;padding-left:0;padding-right:0;}",
      "@media (min-width:",
      "768",
      "px){border-bottom-color:",
      "#DBDBDB",
      ";border-bottom-style:solid;border-bottom-width:1px;margin-bottom:",
      "10px",
      ";min-width:100%;padding-bottom:",
      "10px",
      ";padding-left:0;padding-right:0;}",
      "@media (min-width:",
      "1024",
      "px){border-bottom:none;margin-bottom:0;min-width:auto;padding-bottom:0;padding-left:",
      "10px",
      ";padding-right:",
      "10px",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb__Base",
  "foldedComponentIds": Array [
    "responsiveweb__Base-fgzeui-1",
    "responsiveweb__Base-fgzeui-3",
    "responsiveweb__Base-fgzeui-4",
  ],
  "render": [Function],
  "styledComponentId": "responsiveweb__Base-fgzeui-5",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`14. test getseparator styles with itemcount 2 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2081513707,
    "componentId": "responsiveweb-fgzeui-6",
    "isStatic": false,
    "rules": Array [
      "border-bottom-color:",
      "#DBDBDB",
      ";border-bottom-style:solid;border-bottom-width:1px;flex:1;margin-bottom:",
      "10px",
      ";margin-top:",
      "10px",
      ";min-width:auto;@media (min-width:",
      "768",
      "px){border-bottom:none;border-right-color:",
      "#DBDBDB",
      ";border-right-style:solid;border-right-width:1px;display:",
      "block",
      ";flex:0 !important;margin:0;}@media (min-width:",
      "1024",
      "px){display:block;}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb",
  "foldedComponentIds": Array [],
  "render": [Function],
  "styledComponentId": "responsiveweb-fgzeui-6",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`15. test getseparator styles with itemcount 3 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2081513707,
    "componentId": "responsiveweb-fgzeui-6",
    "isStatic": false,
    "rules": Array [
      "border-bottom-color:",
      "#DBDBDB",
      ";border-bottom-style:solid;border-bottom-width:1px;flex:1;margin-bottom:",
      "10px",
      ";margin-top:",
      "10px",
      ";min-width:auto;@media (min-width:",
      "768",
      "px){border-bottom:none;border-right-color:",
      "#DBDBDB",
      ";border-right-style:solid;border-right-width:1px;display:",
      "none",
      ";flex:0 !important;margin:0;}@media (min-width:",
      "1024",
      "px){display:block;}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb",
  "foldedComponentIds": Array [],
  "render": [Function],
  "styledComponentId": "responsiveweb-fgzeui-6",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`16. test getcontainer styles with supportcount 1 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2081513701,
    "componentId": "responsiveweb-fgzeui-0",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-direction:column;flex-wrap:wrap;height:auto;padding-bottom:",
      "10px",
      ";padding-top:",
      "10px",
      ";width:100%;@media (min-width:",
      "768",
      "px){flex-direction:",
      "row",
      ";width:",
      "100%",
      ";a{display:block;height:100%;}}@media (min-width:",
      "1024",
      "px){width:",
      "100%",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb",
  "foldedComponentIds": Array [],
  "render": [Function],
  "styledComponentId": "responsiveweb-fgzeui-0",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`17. test getcontainer styles with supportcount 0 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": ComponentStyle {
    "baseHash": 2081513701,
    "componentId": "responsiveweb-fgzeui-0",
    "isStatic": false,
    "rules": Array [
      "flex:1;flex-direction:column;flex-wrap:wrap;height:auto;padding-bottom:",
      "10px",
      ";padding-top:",
      "10px",
      ";width:100%;@media (min-width:",
      "768",
      "px){flex-direction:",
      "column",
      ";width:",
      "80.8%",
      ";a{display:block;height:100%;}}@media (min-width:",
      "1024",
      "px){width:",
      "56.2%",
      ";}",
    ],
    "staticRulesId": "",
  },
  "displayName": "responsiveweb",
  "foldedComponentIds": Array [],
  "render": [Function],
  "styledComponentId": "responsiveweb-fgzeui-0",
  "target": [Function],
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;
